gitops-deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitops-deployment
  labels:
    app: gitops-deployment
    app.kubernetes.io/component: gitops-deployment
    app.kubernetes.io/instance: gitops-deployment
    app.kubernetes.io/name: gitops-deployment
    app.kubernetes.io/part-of: gitops-deployment
    app.openshift.io/runtime: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-deployment
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitops-deployment
        deployment: gitops-deployment
    spec:
      containers:
        - name: gitops-deployment
          image: quay.io/openshift-examples/otq-openshift/gitops-deployment-app:1731512673
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
