gitops-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-deployment
spec:
  selector:
    app: gitops-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
