gitops-deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gitops-deployment
spec:
  to:
    kind: Service
    name: gitops-deployment
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
